syntax = "proto3";

option go_package =	"github.com/MorhafAlshibly/coanda/services/team/schema";

package schema;

service TeamService {
    rpc GetTeam(GetTeamRequest) returns (Team);
    rpc GetTeams(GetTeamsRequest) returns (Teams);
    rpc SearchTeams(SearchTeamsRequest) returns (Teams);
    rpc CreateTeam(CreateTeamRequest) returns (Team);
    rpc UpdateTeamData(UpdateTeamDataRequest) returns (Team);
    rpc UpdateTeamScore(UpdateTeamScoreRequest) returns (Team);
    rpc DeleteTeam(DeleteTeamRequest) returns (Team);
    rpc JoinTeam(JoinTeamRequest) returns (Team);
    rpc LeaveTeam(LeaveTeamRequest) returns (Team);
}

enum ErrorCode {
    UNKNOWN = 0;
    NOT_FOUND = 1;
    ALREADY_EXISTS = 2;
    INVALID_ARGUMENT = 3;
    UNAUTHENTICATED = 4;
    PERMISSION_DENIED = 5;
    INTERNAL = 6;
}

message Team {
    string id = 1;
    string name = 2;
    uint64 owner = 3;
    repeated uint64 membersWithoutOwner = 4;
    int64 score = 5;
    int64 rank = 6;
    map<string, string> data = 7;
}

message Teams {
    repeated Team teams = 1;
}

message CreateTeamRequest {
    string name = 1;
    uint64 owner = 2;
    repeated uint64 membersWithoutOwner = 3;
    optional int64 score = 4;
    map<string, string> data = 5;
}

message GetTeamRequest {
    optional string id = 1;
    optional string name = 2;
    optional uint64 owner = 3;
}

message GetTeamsRequest {
    uint64 max = 1;
    uint64 page = 2;
}

message SearchTeamsRequest {
    string query = 1;
    uint64 max = 2;
    uint64 page = 3;
}

message UpdateTeamDataRequest {
    GetTeamRequest team = 1;
    map<string, string> data = 2;
}

message UpdateTeamScoreRequest {
    GetTeamRequest team = 1;
    int64 scoreOffset = 2;
}

message DeleteTeamRequest {
    GetTeamRequest team = 1;
}

message JoinTeamRequest {
    GetTeamRequest team = 1;
    uint64 userId = 2;
}

message LeaveTeamRequest {
    GetTeamRequest team = 1;
    uint64 userId = 2;
}